# sk_excavator

./: Cargo.toml  README.md
excavator_egui/: Cargo.toml
excavator_egui/src/: file_read.rs  file_tree.rs  file_view.rs  main.rs
excavator_egui/src/file_view/: st.rs
excavator_formats/: Cargo.toml
excavator_formats/src/: level.rs  lib.rs  st.rs
excavator_gdextension/: Cargo.toml
excavator_gdextension/src/: lib.rs
excavator_gdextension/src/godot/: file_view.rs  file_view_st.rs  format_resources.rs
godot/: GodotRustTest.gdextension  GodotRustTest.gdextension.uid  dark_theme_from_pixelorama.tres  global_gdscript.gd  global_gdscript.gd.uid  global_rust.tscn  icon.svg.import  main_menu.gd.uid  main_window.tscn  project.godot
godot/file_views/: none.tscn
godot/ui/: file_tree.gd  file_tree.gd.uid  file_view.gd  file_view.gd.uid  main_menu.gd  main_window.tscn
godot/ui/file_views/: image.tscn  none.tscn  pak.gd  pak.gd.uid  pak.tscn  unknown.gd  unknown.gd.uid  unknown.tscn
rust/: Cargo.toml
rust/src/: filesystem.rs  formats.rs  godot.rs  lib.rs
rust/src/formats/: level.rs  st.rs  util_binary.rs
rust/src/godot/: autoload.rs  browser_tree.rs  file_tree.rs  file_view.rs  file_view_st.rs  format_resources.rs
src/: cli.rs  formats.rs  loctext.rs  main.rs  pak.rs  util_binary.rs
src/formats/: loctext.rs  pak.rs  st.rs  stb.rs  util_binary.rs
src/interface/: cli.rs
