[package]
name = "excavator_egui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = { version = "0.33.3", features = ["persistence"] }
egui = "0.33.3"
egui-async = "0.3.0"
egui_extras = "0.33.3"
egui_ltreeview = { version = "0.6.1", features = ["persistence"] }
excavator_formats = { version = "0.1.0", path = "../excavator_formats" }
lexical-sort = "0.3.1"
rfd = "0.17.2"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["fs"] }
